# amend-commit-ai

./: README.md  pyproject.toml
amend_commit_ai/: __init__.py  claude.py  cli.py  pi.py  transcript.py  zed.py
tests/: test_amend_commit_ai.py  test_claude.py  test_cli.py  test_pi.py  test_transcript.py  test_zed.py
