[project]
name = "amend-commit-ai"
version = "0.1"
description = "null"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Tanner Hobson"}]
license = "Apache-2.0"
classifiers = []
dependencies = [

]

[dependency-groups]
dev = [
    "pytest"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/player1537/amend-commit-ai"
Changelog = "https://github.com/player1537/amend-commit-ai/releases"
Issues = "https://github.com/player1537/amend-commit-ai/issues"
CI = "https://github.com/player1537/amend-commit-ai/actions"

